implemented basic db classes using sqlalchemy

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 rich
 nltk
-pymongo
 sqlalchemy
+tkinter
+-e git+https://andersonsacramento@bitbucket.org/andersonsacramento/timebankpttoolkit.git#egg=timebankpttoolkit
